# foreign-whispers

./: .env.example  .gitignore  Dockerfile  README.md  REPORT.md  SUBMISSION_NOTES.md  docker-compose.yml  pyproject.toml  requirements.txt  tts.py  video_registry.yml
api/src/: main.py
api/src/core/: config.py
api/src/inference/: whisper_remote.py
api/src/routers/: diarize.py  download.py  eval.py  stitch.py  transcribe.py  translate.py  tts.py
api/src/schemas/: diarize.py
api/src/services/: download_engine.py  translation_service.py  tts_engine.py  tts_service.py
contrib/lab-chatterbox-tts-api/: README.md  config.py  pyproject.toml  speech.py
deliverables/: README.md  stitch_integration_executed.ipynb
docs/: REMOTE_GPU_LAB.md  UPSTREAM_CONTRIBUTION.md  github-issue-remote-gpu.md  github-issue-tts-speaker-wav.md
foreign_whispers/: __init__.py  alignment.py  client.py  diarization.py  evaluation.py  reranking.py  voice_resolution.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/components/: pipeline-cards.tsx  (+2 more)
notebooks/alignment_integration/: alignment_integration.ipynb
notebooks/diarization_integration/: diarization_integration.ipynb
notebooks/download_integration/: download_integration.ipynb
notebooks/pipeline_end_to_end/: pipeline_end_to_end.ipynb
notebooks/stitch_integration/: stitch_integration.ipynb
notebooks/transcription_integration/: transcription_integration.ipynb
notebooks/translation_integration/: translation_integration.ipynb
notebooks/tts_integration/: tts_integration.ipynb
scripts/: burn_in_dubbed_preview.py  ssh_inference_tunnel.sh  train_tts_duration_predictor.py
scripts/remote-cluster/: start-chatterbox.sh  start-speaches.sh
tests/: conftest.py  test_agents.py  test_alignment.py  test_diarization.py  test_diarize_router.py  test_docker_compose.py  test_fastapi_skeleton.py  test_imagemagick.py  test_services.py  test_stitch_router.py  test_transcribe_router.py  test_translate_router.py  test_translation_service_rerank.py  test_tts_alignment_wire.py  test_tts_baseline_flag.py  test_tts_es.py  test_tts_router.py  test_voice_resolution.py
torch_bridge/: Dockerfile  __init__.py  app.py  config.py  requirements.txt  runner.py
torch_bridge/templates/: tts_job.sh  whisper_job.sh
(+3 files in other folders)
