[project]
name = "foreign-whispers"
version = "0.1.0"
description = "Foreign Whispers: YouTube video dubbing pipeline (download, transcribe, translate, TTS, video stitching)"
license = { text = "LicenseRef-AGPL-3.0-only-with-Commons-Clause" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "TTS>=0.22.0",
    "yt-dlp",
    "youtube-transcript-api",
    "openai-whisper",
    "moviepy<2",
    "argostranslate",
    "transformers>=4.36,<4.46",
    "sentencepiece",
    "streamlit",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-settings",
    "pyrubberband",
    "librosa",
    "soundfile",
    "pydub",
    "requests",
    "setuptools<81",
    "pyyaml>=6.0.3",
    "logfire",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "nbconvert>=7.17.0",
    "scikit-learn>=1.3,<2",
]
alignment = [
    "logfire",
    "silero-vad",
    "pyannote.audio",
]

[tool.uv]
constraint-dependencies = [
    "onnxruntime<1.24",
    "numpy<2",
    "transformers<4.46",
    # pyannote.audio 3.x type-hints torchaudio.AudioMetaData; removed in torchaudio 2.8+.
    # Keep torch/torchaudio on the same capped line for Linux CUDA wheels.
    "torch>=2.2,<2.8",
    "torchaudio>=2.2,<2.8",
]

# CUDA wheels are Linux/Windows only; macOS must use PyPI (CPU/MPS). See:
# https://docs.astral.sh/uv/guides/integration/pytorch/
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_silero: needs silero-vad and torch installed",
    "requires_pyannote: needs pyannote.audio installed and FW_HF_TOKEN set",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foreign_whispers"]
